# general-purpose-zkps-vcs

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  requirements.txt
circuits/: cred_ver.circom  credential_validity_check.circom  reconstruct_root.circom  status_list_check.circom
credential_offers/: diploma_offer.json  hello_offer.json  identity00_offer.json  identity01_offer.json  reference_letter00_offer.json  reference_letter01_offer.json  reference_letter02_offer.json
credentials/: 1c2e0220-ac16-493a-9ab8-cdd7c4307309-zk.jwt  1c2e0220-ac16-493a-9ab8-cdd7c4307309-zk.sdjwt  7c5c9b1f-308c-4d1c-b1ae-ca51d1450256-zk.sdjwt  85fd7f5c-31cd-43f6-8c43-611bc5dd4714-zk.sdjwt  a84ee444-2a49-4732-9ba9-f724beac7aa0-zk.sdjwt  aa85d1d4-b73e-4cd1-a8db-f31d5c846a0f-zk.sdjwt
info/: r1cs.md  wtns.md
sage/: PoseidonConstants.java  gen_circom_constants.py  generate_parameters_grain.sage.py  generate_params_poseidon.sage  generate_params_poseidon.sage.py  params.txt  pos256k1_params.sh  poseidon_constants.circom  poseidon_constants.py  poseidon_params_n256_t10_alpha5_M128.txt  poseidon_params_n256_t11_alpha5_M128.txt  poseidon_params_n256_t12_alpha5_M128.txt  poseidon_params_n256_t13_alpha5_M128.txt  poseidon_params_n256_t14_alpha5_M128.txt  poseidon_params_n256_t15_alpha5_M128.txt  poseidon_params_n256_t16_alpha5_M128.txt  poseidon_params_n256_t17_alpha5_M128.txt  poseidon_params_n256_t2_alpha5_M128.txt  poseidon_params_n256_t3_alpha5_M128.txt  poseidon_params_n256_t4_alpha5_M128.txt  poseidon_params_n256_t5_alpha5_M128.txt  (+4 more)
src/main/: Cargo.toml
src/main/src/: main.rs
(+169 files in other folders)
