[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
spartan = { path = "../spartan" }
prover = { path = "../prover" }
verifier = { path = "../verifier" }
circuit_reader = { path = "../circuit_reader" }
witness_reader = { path = "../witness_reader" }
merlin = "3.0.0"
